--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
     "url": "enspiral-cherubi/dREAM-cACHER_interface_1.0/issues"
   },
   "homepage": "enspiral-cherubi/dREAM-cACHER_interface_1.0",
-  "dependencies": {},
+  "dependencies": {
+    "j-toker": "0.0.10-beta3",
+    "jquery": "^2.2.0",
+    "moment": "^2.11.2",
+    "three": "^0.74.0",
+    "three-fly-controls": "^1.1.0",
+    "three-noise-shader-material": "^1.0.2",
+    "three-window-resize": "^1.0.4"
+  },
   "devDependencies": {
     "browserify": "^10.0.0",
     "budo": "^4.0.0",
