--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-jquery": "^3.3.2",
     "j-toker": "0.0.10-beta3",
     "jquery": "^2.2.0",
+    "lodash.random": "^3.1.1",
     "moment": "^2.11.2",
     "three": "^0.74.0",
     "three-fly-controls": "^1.1.0",
