--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash.random": "^3.1.1",
     "lodash.range": "^3.1.2",
     "moment": "^2.11.2",
+    "query-string": "^3.0.0",
     "three": "^0.74.0",
     "three-fly-controls": "^1.1.0",
     "three-noise-shader-material": "^1.0.2",
