--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "enspiral-cherubi/dREAM-cACHER_interface_1.0",
   "dependencies": {
     "bootstrap-jquery": "^3.3.2",
+    "capitalizer": "^0.2.0",
     "j-toker": "0.0.10-beta3",
     "jquery": "^2.2.0",
     "lodash.random": "^3.1.1",
