--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bootstrap-jquery": "^3.3.2",
     "capitalizer": "^0.2.0",
+    "is-empty-object": "^1.1.1",
     "j-toker": "0.0.10-beta3",
     "jquery": "^2.2.0",
     "lodash.random": "^3.1.1",
