--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "browserify . -o bundle.js -g uglifyify",
     "test": "browserify test.js | smokestack | tap-spec",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
-    "push": "gh-pages -d dist",
-    "deploy": "(export NODE_ENV=production; git push origin master:gh-pages)"
+    "push": "(export NODE_ENV=production; gh-pages -d dist)",
+    "deploy": "npm run build && npm run dist && npm run push"
   },
   "browserify": {
     "transform": [
